fix(view): show full gray line on mobile

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -39,7 +39,7 @@ img {
 .container {
   position: relative;
   padding: 0;
-  background-color: white;
+  background-color: transparent;
   overflow: hidden;
   user-select: none;
 }
